--- a/src/index.html
+++ b/src/index.html
@@ -7,67 +7,213 @@
     <link href="../dist/output.css" rel="stylesheet" />
   </head>
   <body>
-<div class="font-body">
-  
-    <!-- start header-->
-    <div class="px-10 py-5 shadow-md">
-<div class="flex justify-between align-middle h-14">
-        <a href="#" class="w-1/5"><img src="../dist/images/Logo.png" alt="" /></a>
-        <nav class="flex justify-center items-center">
-          <a href="./index.html" class="flex justify-center text-infoColor px-3 text-3xl">Home</a>
-          <a href="./about.html" class="flex justify-center text-black px-3 text-3xl">About</a>
-          <a href="./contact.html" class="flex justify-center text-black px-3 text-3xl">Contact-us</a>
-          <a href="#" class="flex justify-center px-3">
-            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96zM252 160c0 11 9 20 20 20h44v44c0 11 9 20 20 20s20-9 20-20V180h44c11 0 20-9 20-20s-9-20-20-20H356V96c0-11-9-20-20-20s-20 9-20 20v44H272c-11 0-20 9-20 20z"/></svg>    
-        </a>
-          <!-- menu -->
-        </nav>
+    <div class="font-body">
+      <!-- start header-->
+      <div class="px-10 py-5 shadow-md">
+        <div class="flex justify-between align-middle h-14">
+          <a href="#" class="w-1/5"
+            ><img src="../dist/images/Logo.png" alt=""
+          /></a>
+          <nav class="flex justify-center items-center">
+            <a
+              href="./index.html"
+              class="flex justify-center text-infoColor px-3 text-3xl"
+              >Home</a
+            >
+            <a
+              href="./about.html"
+              class="flex justify-center text-black px-3 text-3xl"
+              >About</a
+            >
+            <a
+              href="./contact.html"
+              class="flex justify-center text-black px-3 text-3xl"
+              >Contact-us</a
+            >
+            <a href="#" class="flex justify-center px-3">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                height="1em"
+                viewBox="0 0 576 512"
+              >
+                <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <path
+                  d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96zM252 160c0 11 9 20 20 20h44v44c0 11 9 20 20 20s20-9 20-20V180h44c11 0 20-9 20-20s-9-20-20-20H356V96c0-11-9-20-20-20s-20 9-20 20v44H272c-11 0-20 9-20 20z"
+                />
+              </svg>
+            </a>
+            <!-- menu -->
+          </nav>
+        </div>
       </div>
-    </div>
-      
-    <!-- end header-->
 
-    <!-- start gallery-->
-    <div class="" data-carousel="slide">
-      <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg>
-      <img src="../dist/images/carousel1.jpg" alt="" class="max-w-md" data-carousel-item/>
-      <img src="../dist/images/carousel2.jpg" alt="" class="max-w-md" data-carousel-item/>
-      <img src="../dist/images/carousel3.jpg" alt="" class="max-w-md" data-carousel-item/>
-      <img src="../dist/images/carousel4.jpg" alt="" class="max-w-md" data-carousel-item/>
-      <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg>
-    <!-- end gallery-->
+      <!-- end header-->
 
-    <!-- start buttons-->
-    <div class="catBtn"></div>
-    <div class="catBtn"></div>
-    <div class="catBtn"></div>
-    <div class="catBtn"></div>
-    <!-- end buttons-->
+      <!-- start gallery-->
 
-    <!-- start products-->
-    <div class="card">
-      <div class="info">
-        <img src="" alt="" />
-        <h2 class="title"></h2>
-        <p class="text">
-        </p>
-        <span class="price"></span>
+      <div
+        id="carouselExampleControls"
+        class="relative"
+        data-te-carousel-init
+        data-te-ride="carousel"
+      >
+        <!--Carousel items-->
+        <div
+          class="relative w-full overflow-hidden after:clear-both after:block after:content-['']"
+        >
+          <!--First item-->
+          <div
+            class="relative float-left -mr-[100%] w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
+            data-te-carousel-item
+            data-te-carousel-active
+          >
+            <img
+              src="../dist/images/carousel1.jpg"
+              class="block w-full"
+              alt=""
+            />
+          </div>
+          <!--Second item-->
+          <div
+            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
+            data-te-carousel-item
+          >
+            <img
+              src="../dist/images/carousel2.jpg"
+              class="block w-full"
+              alt=""
+            />
+          </div>
+          <!--Third item-->
+          <div
+            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
+            data-te-carousel-item
+          >
+            <img
+              src="../dist/images/carousel3.jpg"
+              class="block w-full"
+              alt=""
+            />
+          </div>
+          <!--Fourth item-->
+          <div
+            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
+            data-te-carousel-item
+          >
+            <img
+              src="../dist/images/carousel4.jpg"
+              class="block w-full"
+              alt=""
+            />
+          </div>
+        </div>
+
+        <!-- Carousel controls - prev item-->
+        <button
+          class="absolute bottom-0 left-0 top-0 z-[1] flex w-[15%] items-center justify-center border-0 bg-none p-0 text-center text-white opacity-50 transition-opacity duration-150 ease-[cubic-bezier(0.25,0.1,0.25,1.0)] hover:text-white hover:no-underline hover:opacity-90 hover:outline-none focus:text-white focus:no-underline focus:opacity-90 focus:outline-none motion-reduce:transition-none"
+          type="button"
+          data-te-target="#carouselExampleControls"
+          data-te-slide="prev"
+        >
+          <span class="inline-block h-8 w-8">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="h-6 w-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M15.75 19.5L8.25 12l7.5-7.5"
+              />
+            </svg>
+          </span>
+          <span
+            class="!absolute !-m-px !h-px !w-px !overflow-hidden !whitespace-nowrap !border-0 !p-0 ![clip:rect(0,0,0,0)]"
+            >Previous</span
+          >
+        </button>
+
+        <!--Carousel controls - next item -->
+        <button
+          class="absolute bottom-0 right-0 top-0 z-[1] flex w-[15%] items-center justify-center border-0 bg-none p-0 text-center text-white opacity-50 transition-opacity duration-150 ease-[cubic-bezier(0.25,0.1,0.25,1.0)] hover:text-white hover:no-underline hover:opacity-90 hover:outline-none focus:text-white focus:no-underline focus:opacity-90 focus:outline-none motion-reduce:transition-none"
+          type="button"
+          data-te-target="#carouselExampleControls"
+          data-te-slide="next"
+        >
+          <span class="inline-block h-8 w-8">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="h-6 w-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M8.25 4.5l7.5 7.5-7.5 7.5"
+              />
+            </svg>
+          </span>
+          <span
+            class="!absolute !-m-px !h-px !w-px !overflow-hidden !whitespace-nowrap !border-0 !p-0 ![clip:rect(0,0,0,0)]"
+            >Next</span
+          >
+        </button>
       </div>
-      <div class="buy">
-        <span>Add to cart</span>
-        <i></i>
-      </div>
-    </div>
-    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M246.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 109.3V320c0 17.7 14.3 32 32 32s32-14.3 32-32V109.3l73.4 73.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-128-128zM64 352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 53 43 96 96 96H352c53 0 96-43 96-96V352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V352z"/>
-    </svg> 
-    <!-- end products-->
 
-    <!-- start footer-->
-    <div>
-      <span class="flex h-14 shadow-md w-full justify-center items-center text-primary text-2xl font-medium content-end">&copy; Rana Gouda 2023 </span>
+      <!-- end gallery-->
+
+      <!-- start buttons-->
+      <div class="catBtn"></div>
+      <div class="catBtn"></div>
+      <div class="catBtn"></div>
+      <div class="catBtn"></div>
+      <!-- end buttons-->
+
+      <!-- start products-->
+      <div class="card">
+        <div class="info">
+          <img src="" alt="" />
+          <h2 class="title"></h2>
+          <p class="text"></p>
+          <span class="price"></span>
+        </div>
+        <div class="buy">
+          <span>Add to cart</span>
+          <i></i>
+        </div>
+      </div>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        height="1em"
+        viewBox="0 0 448 512"
+      >
+        <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+        <path
+          d="M246.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 109.3V320c0 17.7 14.3 32 32 32s32-14.3 32-32V109.3l73.4 73.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-128-128zM64 352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 53 43 96 96 96H352c53 0 96-43 96-96V352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V352z"
+        />
+      </svg>
+      <!-- end products-->
+
+      <!-- start footer-->
+      <div>
+        <span
+          class="flex h-14 shadow-md w-full justify-center items-center text-primary text-2xl font-medium content-end"
+          >&copy; Rana Gouda 2023
+        </span>
+      </div>
+      <!-- end footer-->
     </div>
-    <!-- end footer-->
-</div>
     <script src="script.js"></script>
+    <script
+      type="text/javascript"
+      src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
+    ></script>
   </body>
 </html>
