Added the Category Button element

--- a/src/index.html
+++ b/src/index.html
@@ -170,6 +170,15 @@
       <!-- end gallery-->
 
       <!-- start buttons-->
+      <button
+        type="button"
+        data-te-ripple-init
+        data-te-ripple-color="light"
+        class="flex rounded bg-infoColor bg-opacity-30 px-6 pb-2 pt-2.5 text-3xl font-medium uppercase leading-normal text-black transition duration-150 ease-in-out hover:text-primary hover:shadow-sm m-auto my-7"
+      >
+        Click me
+      </button>
+
       <div class="catBtn"></div>
       <div class="catBtn"></div>
       <div class="catBtn"></div>
