--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,16 @@
     <title>Click & Collect</title>
     <link href="../dist/output.css" rel="stylesheet" />
   </head>
+
   <body>
     <div class="font-body">
       <!-- start header-->
-      <div class="px-10 py-5 shadow-md">
-        <div class="flex justify-between align-middle h-14">
+      <div class="px-20 py-5 shadow-lg z-20">
+        <div class="flex justify-between align-middle h-16">
           <a href="#" class="w-1/5"
-            ><img src="../dist/images/Logo.png" alt=""
+            ><img src="../dist/images/Logo.png" alt="" class="max-h-full"
           /></a>
-          <nav class="flex justify-center items-center">
+          <nav class="flex justify-evenly gap-5 items-center">
             <a
               href="./index.html"
               class="flex justify-center text-infoColor px-3 text-3xl"
@@ -30,10 +31,10 @@
               class="flex justify-center text-black px-3 text-3xl"
               >Contact-us</a
             >
-            <a href="#" class="flex justify-center px-3">
+            <a href="#" class="flex justify-center px-3 fill-primary w-32">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                height="1em"
+                height="2.5em"
                 viewBox="0 0 576 512"
               >
                 <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
@@ -63,46 +64,46 @@
         >
           <!--First item-->
           <div
-            class="relative float-left -mr-[100%] w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
+            class="relative float-left -mr-[100%] w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
             data-te-carousel-item
             data-te-carousel-active
           >
             <img
               src="../dist/images/carousel1.jpg"
-              class="block w-full"
+              class="w-full align-middle"
               alt=""
             />
           </div>
           <!--Second item-->
           <div
-            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
+            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
             data-te-carousel-item
           >
             <img
               src="../dist/images/carousel2.jpg"
-              class="block w-full"
+              class="w-full align-middle"
               alt=""
             />
           </div>
           <!--Third item-->
           <div
-            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
+            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
             data-te-carousel-item
           >
             <img
               src="../dist/images/carousel3.jpg"
-              class="block w-full"
+              class="w-full align-middle"
               alt=""
             />
           </div>
           <!--Fourth item-->
           <div
-            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
+            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
             data-te-carousel-item
           >
             <img
               src="../dist/images/carousel4.jpg"
-              class="block w-full"
+              class="w-full align-middle"
               alt=""
             />
           </div>
@@ -170,19 +171,17 @@
       <!-- end gallery-->
 
       <!-- start buttons-->
-      <button
-        type="button"
-        data-te-ripple-init
-        data-te-ripple-color="light"
-        class="flex rounded bg-infoColor bg-opacity-30 px-6 pb-2 pt-2.5 text-3xl font-medium uppercase leading-normal text-black transition duration-150 ease-in-out hover:text-primary hover:shadow-sm m-auto my-7"
-      >
-        Click me
-      </button>
+      <div class="categories">
+        <button
+          type="button"
+          data-te-ripple-init
+          data-te-ripple-color="light"
+          class="flex rounded bg-infoColor bg-opacity-30 px-6 pb-2 pt-2.5 text-3xl font-medium uppercase leading-normal text-black transition duration-150 ease-in-out hover:text-primary hover:shadow-sm m-auto my-7"
+        >
+          Click me
+        </button>
+      </div>
 
-      <div class="catBtn"></div>
-      <div class="catBtn"></div>
-      <div class="catBtn"></div>
-      <div class="catBtn"></div>
       <!-- end buttons-->
 
       <!-- start products-->
@@ -249,9 +248,9 @@
       <!-- end products-->
 
       <!-- start footer-->
-      <div>
+      <div class="relative">
         <span
-          class="flex h-14 shadow-md w-full justify-center items-center text-primary text-2xl font-medium content-end"
+          class="flex h-24 shadow-lg w-full justify-center items-center text-primary text-3xl font-medium absolute bottom-0"
           >&copy; Rana Gouda 2023
         </span>
       </div>
