Adjusted carousel & buttons height

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
     <link
       rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
-    <link href="path_to_css_files/solid.css" rel="stylesheet" />
 
     <!-- <script defer src="path_to_js_files/all.js"></script>  -->
 
@@ -77,7 +76,7 @@
         >
           <!--First item-->
           <div
-            class="relative float-left -mr-[100%] w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-96 lg:h-hh"
+            class="relative float-left -mr-[100%] w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
             data-te-carousel-item
             data-te-carousel-active
           >
@@ -89,7 +88,7 @@
           </div>
           <!--Second item-->
           <div
-            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-96 lg:h-hh"
+            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
             data-te-carousel-item
           >
             <img
@@ -100,7 +99,7 @@
           </div>
           <!--Third item-->
           <div
-            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-96 lg:h-hh"
+            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
             data-te-carousel-item
           >
             <img
@@ -111,7 +110,7 @@
           </div>
           <!--Fourth item-->
           <div
-            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-96 lg:h-hh"
+            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
             data-te-carousel-item
           >
             <img
@@ -176,7 +175,7 @@
       <!-- end gallery-->
 
       <!-- start buttons-->
-      <div class="categories flex flex-row justify-center"></div>
+      <div class="categories flex flex-row justify-center h-28"></div>
 
       <!-- end buttons-->
 
@@ -212,7 +211,7 @@
       >
         <div class="p-4 text-center h-24 shadow-lg">
           <span
-            class="flex justify-center items-center text-primary text-3xl font-medium"
+            class="flex justify-center items-center text-primary text-2xl font-medium"
             >&copy; Rana Gouda 2023
           </span>
         </div>
