Adjusted the header items' sizes

--- a/src/index.html
+++ b/src/index.html
@@ -24,31 +24,31 @@
   <body>
     <div class="font-body">
       <!-- start header-->
-      <div class="px-20 py-5 shadow-lg z-20">
+      <div class="px-16 shadow-lg z-20">
         <div class="flex justify-between align-middle h-16">
-          <a href="#" class="w-1/5"
+          <a href="#" class="w-1/5 p-2"
             ><img src="../dist/images/Logo.png" alt="" class="max-h-full"
           /></a>
           <nav class="flex justify-evenly gap-5 items-center">
             <a
               href="./index.html"
-              class="flex justify-center text-infoColor hover:text-infoColor px-3 text-2xl"
+              class="flex justify-center text-infoColor hover:text-infoColor px-3 text-xl"
               >Home</a
             >
             <a
               href="./about.html"
-              class="flex justify-center text-black hover:text-infoColor px-3 text-2xl"
+              class="flex justify-center text-black hover:text-infoColor px-3 text-xl"
               >About</a
             >
             <a
               href="./contact.html"
-              class="flex justify-center text-black hover:text-infoColor px-3 text-2xl"
+              class="flex justify-center text-black hover:text-infoColor px-3 text-xl"
               >Contact-us</a
             >
-            <a href="#" class="flex justify-center px-3 fill-primary w-16">
+            <a href="#" class="flex justify-center px-3 fill-primary w-14">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                height="2.5em"
+                height="28px"
                 viewBox="0 0 576 512"
               >
                 <path
