Modified footer & scrollup button styles

--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,7 @@
           type="button"
           data-te-ripple-init
           data-te-ripple-color="light"
-          class="rounded-full bg-primary p-3 m-2 uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out"
+          class="fixed bottom-5 right-5 z-10 rounded-full bg-primary p-3 m-2 uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca]"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -209,11 +209,11 @@
 
       <!-- start footer-->
       <footer
-        class="bg-white text-center lg:text-left w-full relative bottom-0"
+        class="bg-white flex items-center justify-center w-full relative bottom-0 shadow-md"
       >
-        <div class="p-4 text-center h-24 shadow-lg">
+        <div class="p-4 h-16">
           <span
-            class="flex justify-center items-center text-primary text-2xl font-medium"
+            class="text-center align-middle text-primary text-base uppercase font-medium"
             >&copy; Rana Gouda 2023
           </span>
         </div>
