Replaced script.js file by cart.js

--- a/src/contact.html
+++ b/src/contact.html
@@ -138,7 +138,7 @@
       </footer>
       <!-- end footer-->
     </div>
-    <script src="script.js"></script>
+    <script src="cart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
   </body>
 </html>
