--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,9 @@
       href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css"
     />
     <link
-      rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      rel="stylesheet"
+      href="../font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css"
     />
-
-    <!-- <script defer src="path_to_js_files/all.js"></script>  -->
-
     <link href="../dist/output.css" rel="stylesheet" />
   </head>
 
