Set scroll-up button default display to hidden

--- a/src/index.html
+++ b/src/index.html
@@ -185,7 +185,7 @@
       <!-- end products-->
 
       <!-- scroll up button-->
-      <div class="scroll">
+      <div class="scroll hidden">
         <button
           type="button"
           data-te-ripple-init
