Adjusted some styles

--- a/src/about.html
+++ b/src/about.html
@@ -57,25 +57,29 @@
 
       <!-- start about-->
 
-      <div class="flex flex-wrap h-auto m-14">
-        <div class="basis-1/2 block p-20 text-5xl">
-          <h3 class="font-bold my-10">
+      <div class="flex flex-wrap h-auto m-14 overflow-hidden">
+        <div class="block p-12 text-4xl w-1/2">
+          <h3 class="font-bold my-10 text-primaryText">
             Hello To The World Of Click &amp; Collect
           </h3>
-          <p class="font-normal">
+          <p class="font-normal text-3xl text-secondaryText">
             Here Iam gonna share everything about my life. Books Iam reading,
             Games Iam Playing, Stories and Events
           </p>
         </div>
-        <div class="basis-1/2">
-          <img src="../dist/images/Logo.png" alt="" class="p-20" />
+        <div class="w-1/2">
+          <img
+            src="../dist/images/Logo.png"
+            alt=""
+            class="p-12 align-middle w-max block"
+          />
         </div>
       </div>
       <!-- end about-->
 
       <!-- start footer-->
       <footer
-        class="bg-white flex items-center justify-center w-full relative bottom-0 shadow-md"
+        class="bg-white flex items-center justify-center w-full absolute bottom-0 shadow-md"
       >
         <div class="p-4 h-16">
           <span
@@ -86,7 +90,6 @@
       </footer>
       <!-- end footer-->
     </div>
-    <script src="cart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
   </body>
 </html>
