Added footer shadow

--- a/src/login.html
+++ b/src/login.html
@@ -161,7 +161,7 @@
       <!-- end login -->
       <!-- start footer-->
       <footer
-        class="bg-white flex items-center justify-center w-full relative bottom-0 shadow-md"
+        class="bg-white flex items-center justify-center w-full relative bottom-0 shadow-[0_-3px_20px_0_rgba(0,0,0,0.1)]"
       >
         <div class="p-4 h-16">
           <span
