Adjusted some styles

--- a/src/about.html
+++ b/src/about.html
@@ -38,7 +38,11 @@
               class="flex justify-center text-black hover:text-infoColor px-3 text-xl"
               >Contact-us</a
             >
-            <a href="#" class="flex justify-center p-4 fill-primary w-14">
+            <a
+              id="cartIcon"
+              href="#"
+              class="flex justify-center p-4 fill-primary w-14"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 height="28px"
@@ -109,8 +113,8 @@
       </footer>
       <!-- end footer-->
     </div>
-    <script src="script.js"></script>
     <script src="cart.js"></script>
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
   </body>
 </html>
