--- a/src/contact.html
+++ b/src/contact.html
@@ -38,7 +38,11 @@
               class="flex justify-center text-infoColor hover:text-infoColor px-3 text-xl"
               >Contact-us</a
             >
-            <a href="#" class="flex justify-center p-4 fill-primary w-14">
+            <a
+              id="cartIcon"
+              href="#"
+              class="flex justify-center p-4 fill-primary w-14"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 height="28px"
@@ -75,11 +79,11 @@
       <!-- end header-->
 
       <!-- start contact-->
-      <div class="flex justify-center items-center flex-col pb-10 bg-white p-6">
+      <div class="flex justify-center items-center flex-col pb-10 p-6">
         <h1 class="font-bold tracking-[3px] text-4xl mb-5 text-black">
           Contact-Us
         </h1>
-        <form class="p-5 w-1/3">
+        <form class="p-5 w-5/12">
           <!--Name input-->
           <div class="relative mb-6 bg-red-400">
             <input
@@ -145,9 +149,9 @@
       </footer>
       <!-- end footer-->
     </div>
-    <script src="script.js"></script>
     <script src="cart.js"></script>
     <script src="validation.js"></script>
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
   </body>
 </html>
