Changed the cart default style to hidden

--- a/src/about.html
+++ b/src/about.html
@@ -55,7 +55,7 @@
               <div class="cartCounter" id="cartCounter">0</div>
               <div
                 id="cart"
-                class="top-14 z-10 bg-white items-center rounded fixed right-16 w-[400px] h-[50vh] overflow-y-scroll"
+                class="hidden top-14 z-10 bg-white items-center rounded fixed right-16 w-[400px] h-[50vh] overflow-y-scroll"
               ></div>
             </a>
             <a
