--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
               <div class="cartCounter fixed" id="cartCounter">0</div>
               <div
                 id="cart"
-                class="top-14 z-10 bg-white items-center rounded fixed right-16 w-[400px] h-[50vh] overflow-y-scroll"
+                class="hidden top-14 z-10 bg-white items-center rounded fixed right-16 w-[400px] h-[50vh] overflow-y-scroll"
               ></div>
             </a>
             <a
@@ -242,6 +242,7 @@
     </div>
     <script src="cart.js"></script>
     <script src="script.js"></script>
+    <script src="validation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
   </body>
 </html>
