--- a/src/login.html
+++ b/src/login.html
@@ -55,7 +55,7 @@
               <div class="cartCounter" id="cartCounter">0</div>
               <div
                 id="cart"
-                class="top-14 z-10 bg-white items-center rounded fixed right-16 w-[400px] h-[50vh] overflow-y-scroll"
+                class="hidden top-14 z-10 bg-white items-center rounded fixed right-16 w-[400px] h-[50vh] overflow-y-scroll"
               ></div>
             </a>
             <a
@@ -96,7 +96,6 @@
                   type="text"
                   class="block min-h-[auto] w-full border-b border-gray-400 bg-[#f9f9f9] p-4 mb-6"
                   placeholder="Email address"
-                  onsubmit="validateEmail()"
                 />
               </div>
 
@@ -106,7 +105,6 @@
                   type="password"
                   class="block min-h-[auto] w-full border-b border-gray-400 bg-[#f9f9f9] p-4 mb-6"
                   placeholder="Password"
-                  onsubmit="validatePassword()"
                 />
               </div>
 
@@ -174,7 +172,6 @@
     </div>
     <script src="cart.js"></script>
     <script src="validation.js"></script>
-    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
   </body>
 </html>
