Gave cart higher z-index

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
             <a
               id="cartIcon"
               href="#"
-              class="flex justify-center p-4 fill-primary w-14"
+              class="flex justify-center p-4 fill-primary w-14 z-30"
             >
               <div class="relative">
                 <svg
@@ -60,10 +60,9 @@
                 </svg>
                 <div class="cartCounter" id="cartCounter">0</div>
               </div>
-
               <div
                 id="cart"
-                class="hidden top-14 z-10 bg-white items-center rounded fixed right-16 w-[400px] h-[50vh] overflow-y-scroll"
+                class="hidden top-14 bg-white items-center rounded fixed right-16 w-[400px] h-[50vh] overflow-y-scroll"
               ></div>
             </a>
             <a
