Changed carousel height

--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
         >
           <!--First item-->
           <div
-            class="relative float-left -mr-[100%] w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
+            class="relative float-left -mr-[100%] w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-[400px]"
             data-te-carousel-item
             data-te-carousel-active
           >
@@ -111,7 +111,7 @@
           </div>
           <!--Second item-->
           <div
-            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
+            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-[400px]"
             data-te-carousel-item
           >
             <img
@@ -122,7 +122,7 @@
           </div>
           <!--Third item-->
           <div
-            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
+            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-[400px]"
             data-te-carousel-item
           >
             <img
@@ -133,7 +133,7 @@
           </div>
           <!--Fourth item-->
           <div
-            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-hh"
+            class="relative float-left -mr-[100%] hidden w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none h-[400px]"
             data-te-carousel-item
           >
             <img
